@@ -9,6 +9,7 @@ version 1.0.0 (comming)
 	* fn:trace can be disabled by setting the option QName("http://www.zorba-xquery.org/option", "trace")  to "disable"
 	* Changed the scripting syntax of the exit expression from 'exit with' to 'exit returning'. 
 		This is due to an ambiguity in the grammar (see http://www.w3.org/Bugs/Public/show_bug.cgi?id=6852 for more information).
+  * Added some accessor functions for node items to the Item class in the API (e.g. getChildren, getAttributes, or getNodeName)
 
 version 0.9.5 (2008.02.17)
   * Unified the Tidy and Rest API's
